# Atelier_Rename

./: .gitignore  pyproject.toml
src/rename/: rename.py
tests/: reset_path.py
