[project]
name = "Rename"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Luc Bougé", email = "Luc.Bouge@ens-rennes.fr" }]
dependencies = ["exif>=1.6.0", "typeguard>=4.2.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
distribution = false

[tool.pdm.scripts]
make = "python src/rename/rename.py"
reset = "python tests/reset_path.py"
